--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vuejs-datepicker": "^0.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,6 +42,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
+    "vue-datepicker": "^1.3.0",
     "vue-loader": "^12.1.0",
     "vue-qriously": "^1.1.1",
     "vue-style-loader": "^3.0.1",
