--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "v-autocomplete": "^1.4.1",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
+    "vue-xlsx-table": "^1.2.7",
     "vuejs-datepicker": "^0.9.4"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-datepicker": "^1.3.0",
+    "vue-instant": "^1.0.1",
     "vue-loader": "^12.1.0",
     "vue-qriously": "^1.1.1",
     "vue-style-loader": "^3.0.1",
